--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <img src="../Black Minimalist Lion King Logo.png" alt="Descrição da Imagem" >
+    <img src="../app-marturia/Black Minimalist Lion King Logo.png" alt="Descrição da Imagem" >
     
     <div class="right-container">
       <div class="card-container-right">
